[tool.poetry]
name = "babybottlelog"
version = "0.1.0"
description = ""
authors = ["Maarten"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
streamlit = "^1.41.1"
jupyter = "^1.1.1"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
